test: split test runtime toml tests